...

        if (!parkSnapshots.hasData || parkSnapshots.data!.docs.isEmpty) {
          // Render UI when there are no parking spots
          return Scaffold(
            appBar: AppBar(
              backgroundColor: Colors.pink,
              title: const Text('My Parking Spots'),
            ),
            body: Padding(
              padding: const EdgeInsets.all(16.0),
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.stretch,
                children: [
                  buildButton(
                    context,
                    'Add new',
                    'Null',
                    Icons.add_circle,
                    () {
                      Navigator.push(
                        context,
                        MaterialPageRoute(
...
