...
      children: [
        TextField(
          key: widget.key,
          controller: widget.controller,
          onChanged: _onTextChanged,
          decoration: const InputDecoration(
            labelText: 'Address',
          ),
        ),
        const SizedBox(height: 10),
        ListView.builder(
          shrinkWrap: true,
          itemCount: _suggestions.length,
...
