...
                style: ElevatedButton.styleFrom(
                  backgroundColor: Colors.pink,
                  padding:
                      const EdgeInsets.symmetric(horizontal: 48, vertical: 16),
                ),
                child: const Text(
                  'Log In',
                  style: TextStyle(fontSize: 18),
                ),
              ),
            ),
            const SizedBox(height: 24), // empty place
            /// Gooogle Login Box - Eventually
...
            const SizedBox(height: 24),
            InkWell(
              onTap: () {
                _signUp(context);
              },
              child: const Text(
                'Sign up',
                style: TextStyle(fontSize: 18),
              ),
            ),
          ],
        ),
      ),
...
