...
                  padding: const EdgeInsets.symmetric(vertical: 16.0),
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(30.0),
                  ),
                ),
                child: const Text(
                  'Skip Survey',
                  style: TextStyle(fontSize: 20),
                ),
              ),
            ),
          ],
        ),
...
